--- a/css/style.css
+++ b/css/style.css
@@ -161,30 +161,6 @@ svg {
   height: 14px;
 }
 
-.main_block {
-  margin-top: 30px;
-  background-color: #fcf9f9;
-  padding: 18px 25px 0px 25px;
-  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
-          box-shadow: 10px 10px 8px -3px #a8a7a7;
-}
-
-.main_block2 {
-  margin-top: 65px;
-  background-color: #fcf9f9;
-  padding: 18px 25px 0px 25px;
-  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
-          box-shadow: 10px 10px 8px -3px #a8a7a7;
-}
-
-.main_block3 {
-  margin-top: 77px;
-  background-color: #fcf9f9;
-  padding: 18px 25px 10px 25px;
-  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
-          box-shadow: 10px 10px 8px -3px #a8a7a7;
-}
-
 p {
   margin: 0;
 }
@@ -220,6 +196,93 @@ p {
 }
 
 @media (min-width: 300px) {
+  .tabl_img {
+    padding: 5px;
+    color: #fff;
+    font-size: 15px;
+  }
+  .tabl_img:hover {
+    padding: 5px 5px;
+    color: #fff;
+    font-size: 15px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 5px 5px;
+    color: #fff;
+    font-size: 15px;
+    background: #eea928;
+  }
+  .tabl {
+    font-size: 15px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .edit {
+    width: 15px;
+  }
+  .main_block {
+    margin-top: 30px;
+    background-color: #fcf9f9;
+    padding: 18px 14px 0px 14px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block2 {
+    margin-top: 65px;
+    background-color: #fcf9f9;
+    padding: 18px 14px 0px 14px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block3 {
+    margin-top: 77px;
+    background-color: #fcf9f9;
+    padding: 18px 14px 10px 14px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  input {
+    accent-color: #d4d3d3;
+    width: 14px;
+    height: 14px;
+  }
+  .check {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 7fr 1fr;
+        grid-template-columns: 1fr 7fr 1fr;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .images {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 4px;
+            column-gap: 4px;
+  }
+  .main_used2 {
+    font-size: 13px;
+  }
+  .new {
+    padding-top: 10px;
+    font-size: 15px;
+  }
+  .main_get3 {
+    font-size: 13px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 2fr 2fr;
+        grid-template-columns: 1fr 3fr 2fr 2fr;
+    padding: 10px 20px;
+  }
   .square_blue3 {
     background-color: #252594;
     display: -webkit-box;
@@ -277,9 +340,115 @@ p {
     padding: 0 25px;
     position: relative;
   }
+  .fut2 {
+    font-size: 12px;
+  }
+  .fut {
+    -webkit-transform: translateY(2px);
+            transform: translateY(2px);
+    font-size: 10px;
+    gap: 5px;
+  }
+  .main_used3 {
+    color: #04a877;
+    font-size: 15px;
+    padding-bottom: 5px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 2fr 1fr;
+        grid-template-columns: 1fr 3fr 2fr 1fr;
+    padding: 10px 20px;
+  }
 }
 
 @media (min-width: 800px) {
+  .tabl_img {
+    padding: 30px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    padding: 15px 43px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .edit {
+    width: 32px;
+  }
+  .main_block {
+    margin-top: 30px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 0px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block2 {
+    margin-top: 65px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 0px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block3 {
+    margin-top: 77px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 10px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  input {
+    accent-color: #d4d3d3;
+    width: 25px;
+    height: 25px;
+  }
+  .check {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 4fr 1fr;
+        grid-template-columns: 1fr 4fr 1fr;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .images {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
+  .main_used2 {
+    font-size: 20px;
+  }
+  .new {
+    padding-top: 10px;
+    font-size: 20px;
+  }
+  .main_get3 {
+    font-size: 16px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr 1fr;
+    padding: 10px 20px;
+  }
   .square_blue3 {
     background-color: #252594;
     display: -webkit-box;
@@ -336,10 +505,114 @@ p {
     overflow: hidden;
     padding: 0 40px;
     position: relative;
+  }
+  .fut2 {
+    font-size: 16px;
+  }
+  .fut {
+    font-size: 16px;
+    gap: 60px;
+  }
+  .main_used3 {
+    color: #04a877;
+    font-size: 20px;
+    padding-bottom: 5px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr 1fr;
+    padding: 10px 20px;
   }
 }
 
 @media (min-width: 900px) {
+  .tabl_img {
+    padding: 30px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    padding: 15px 43px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .edit {
+    width: 32px;
+  }
+  .main_block {
+    margin-top: 30px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 0px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block2 {
+    margin-top: 65px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 0px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block3 {
+    margin-top: 77px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 10px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  input {
+    accent-color: #d4d3d3;
+    width: 25px;
+    height: 25px;
+  }
+  .check {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 4fr 1fr;
+        grid-template-columns: 1fr 4fr 1fr;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .images {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
+  .main_used2 {
+    font-size: 20px;
+  }
+  .new {
+    padding-top: 10px;
+    font-size: 20px;
+  }
+  .main_get3 {
+    font-size: 16px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr 1fr;
+    padding: 10px 20px;
+  }
   .square_blue3 {
     background-color: #252594;
     display: -webkit-box;
@@ -397,10 +670,114 @@ p {
     overflow: hidden;
     padding: 0 40px;
     position: relative;
+  }
+  .fut2 {
+    font-size: 16px;
+  }
+  .fut {
+    font-size: 16px;
+    gap: 60px;
+  }
+  .main_used3 {
+    color: #04a877;
+    font-size: 20px;
+    padding-bottom: 5px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr 1fr;
+    padding: 10px 20px;
   }
 }
 
 @media (min-width: 1440px) {
+  .tabl_img {
+    padding: 30px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    padding: 15px 43px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .edit {
+    width: 32px;
+  }
+  .main_block {
+    margin-top: 30px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 0px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block2 {
+    margin-top: 65px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 0px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  .main_block3 {
+    margin-top: 77px;
+    background-color: #fcf9f9;
+    padding: 18px 25px 10px 25px;
+    -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+            box-shadow: 10px 10px 8px -3px #a8a7a7;
+  }
+  input {
+    accent-color: #d4d3d3;
+    width: 25px;
+    height: 25px;
+  }
+  .check {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 4fr 1fr;
+        grid-template-columns: 1fr 4fr 1fr;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .images {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
+  .main_used2 {
+    font-size: 20px;
+  }
+  .new {
+    padding-top: 10px;
+    font-size: 20px;
+  }
+  .main_get3 {
+    font-size: 16px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr 1fr;
+    padding: 10px 20px;
+  }
   .square_blue3 {
     background-color: #252594;
     display: -webkit-box;
@@ -417,6 +794,9 @@ p {
     height: 73px;
     top: 116px;
     border: 3px solid #d1cece;
+  }
+  .fut2 {
+    font-size: 16px;
   }
   .square_orenge2 {
     background-color: #e29505;
@@ -458,6 +838,20 @@ p {
     overflow: hidden;
     padding: 0 40px;
     position: relative;
+  }
+  .fut {
+    font-size: 16px;
+    gap: 60px;
+  }
+  .main_used3 {
+    color: #04a877;
+    font-size: 20px;
+    padding-bottom: 5px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 1fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr 1fr;
+    padding: 10px 20px;
   }
 }
 
@@ -487,10 +881,6 @@ p {
   height: 100%;
 }
 
-.main_used2 {
-  font-size: 20px;
-}
-
 .main_get {
   font-size: 13px;
   padding-top: 5px;
@@ -507,85 +897,6 @@ p {
   border: 3px solid #d1cece;
 }
 
-.new {
-  padding-top: 10px;
-  font-size: 20px;
-}
-
-.main_used3 {
-  color: #04a877;
-  font-size: 20px;
-  padding-bottom: 5px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 3fr 1fr 1fr;
-      grid-template-columns: 1fr 3fr 1fr 1fr;
-  padding: 10px 20px;
-}
-
-.main_get3 {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 3fr 1fr 1fr;
-      grid-template-columns: 1fr 3fr 1fr 1fr;
-  padding: 10px 20px;
-}
-
-.tabl {
-  font-size: 20px;
-  color: #fff;
-  padding: 30px;
-  -webkit-transform: translateY(-50px);
-          transform: translateY(-50px);
-  border: 3px solid #d1cece;
-}
-
-.tabl_img {
-  padding: 30px;
-  color: #fff;
-  font-size: 20px;
-}
-
-.tabl_img:hover {
-  padding: 15px 43px;
-  color: #fff;
-  font-size: 20px;
-  background: #eea928;
-}
-
-.tabl_img_bugs {
-  padding: 15px 30px;
-  color: #fff;
-  font-size: 20px;
-  background: #eea928;
-}
-
-input {
-  accent-color: #d4d3d3;
-  width: 25px;
-  height: 25px;
-}
-
-.check {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 4fr 1fr;
-      grid-template-columns: 1fr 4fr 1fr;
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.images {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -webkit-column-gap: 20px;
-          column-gap: 20px;
-}
-
 .futer {
   display: -ms-grid;
   display: grid;
@@ -600,7 +911,6 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 60px;
 }
 
 .fut a {
