--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,16 @@ svg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 13px 53px 13px 43px;
+  padding: 13px 23px 13px 43px;
+  border-bottom: 4px solid #fcf9f9;
+}
+
+.user:hover {
+  padding: 13px 23px 13px 22px;
+  margin: 0 21px;
+  color: #fff;
+  background-color: #ee055e;
+  border-bottom: 4px solid #d1cece;
 }
 
 @media (min-width: 200px) {
@@ -97,7 +106,7 @@ svg {
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 950px) {
   .navbar {
     display: block;
     height: 100%;
@@ -196,31 +205,6 @@ p {
 }
 
 @media (min-width: 300px) {
-  .tabl_img {
-    padding: 5px;
-    color: #fff;
-    font-size: 15px;
-  }
-  .tabl_img:hover {
-    padding: 5px 5px;
-    color: #fff;
-    font-size: 15px;
-    background: #eea928;
-  }
-  .tabl_img_bugs {
-    padding: 5px 5px;
-    color: #fff;
-    font-size: 15px;
-    background: #eea928;
-  }
-  .tabl {
-    font-size: 15px;
-    color: #fff;
-    padding: 30px;
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
-    border: 3px solid #d1cece;
-  }
   .edit {
     width: 15px;
   }
@@ -362,31 +346,6 @@ p {
 }
 
 @media (min-width: 800px) {
-  .tabl_img {
-    padding: 30px;
-    color: #fff;
-    font-size: 20px;
-  }
-  .tabl_img:hover {
-    padding: 15px 43px;
-    color: #fff;
-    font-size: 20px;
-    background: #eea928;
-  }
-  .tabl_img_bugs {
-    padding: 15px 30px;
-    color: #fff;
-    font-size: 20px;
-    background: #eea928;
-  }
-  .tabl {
-    font-size: 20px;
-    color: #fff;
-    padding: 30px;
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
-    border: 3px solid #d1cece;
-  }
   .edit {
     width: 32px;
   }
@@ -525,32 +484,7 @@ p {
   }
 }
 
-@media (min-width: 900px) {
-  .tabl_img {
-    padding: 30px;
-    color: #fff;
-    font-size: 20px;
-  }
-  .tabl_img:hover {
-    padding: 15px 43px;
-    color: #fff;
-    font-size: 20px;
-    background: #eea928;
-  }
-  .tabl_img_bugs {
-    padding: 15px 30px;
-    color: #fff;
-    font-size: 20px;
-    background: #eea928;
-  }
-  .tabl {
-    font-size: 20px;
-    color: #fff;
-    padding: 30px;
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
-    border: 3px solid #d1cece;
-  }
+@media (min-width: 950px) {
   .edit {
     width: 32px;
   }
@@ -691,31 +625,6 @@ p {
 }
 
 @media (min-width: 1440px) {
-  .tabl_img {
-    padding: 30px;
-    color: #fff;
-    font-size: 20px;
-  }
-  .tabl_img:hover {
-    padding: 15px 43px;
-    color: #fff;
-    font-size: 20px;
-    background: #eea928;
-  }
-  .tabl_img_bugs {
-    padding: 15px 30px;
-    color: #fff;
-    font-size: 20px;
-    background: #eea928;
-  }
-  .tabl {
-    font-size: 20px;
-    color: #fff;
-    padding: 30px;
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
-    border: 3px solid #d1cece;
-  }
   .edit {
     width: 32px;
   }
@@ -1050,5 +959,395 @@ p {
         grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
+}
+
+@media (min-width: 300px) {
+  .tabl_img {
+    /*padding: 10px 20px;*/
+    color: #fff;
+    font-size: 13px;
+  }
+  .tabl_img:hover {
+    color: #fff;
+    font-size: 13px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    /*padding: 10px 30px;*/
+    color: #fff;
+    font-size: 13px;
+    background: #eea928;
+  }
+  .tabl {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    font-size: 13px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .task {
+    padding: 10px 20px;
+  }
+}
+
+@media (min-width: 500px) {
+  .tabl_img {
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 2fr 2fr 2fr;
+        grid-template-columns: 1fr 2fr 2fr 2fr;
+    -ms-grid-rows: 0fr 0fr;
+        grid-template-rows: 0fr 0fr;
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .task {
+    padding: 10px 20px;
+  }
+}
+
+@media (min-width: 800px) {
+  .tabl_img {
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 2fr 2fr 2fr;
+        grid-template-columns: 1fr 2fr 2fr 2fr;
+    -ms-grid-rows: 0fr 0fr;
+        grid-template-rows: 0fr 0fr;
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .task {
+    padding: 10px 20px;
+  }
+}
+
+@media (min-width: 950px) {
+  .tabl_img {
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 3fr 3fr;
+        grid-template-columns: 1fr 3fr 3fr 3fr;
+    -ms-grid-rows: 0fr 0fr;
+        grid-template-rows: 0fr 0fr;
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .task {
+    padding: 10px 20px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .tabl_img {
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .tabl_img:hover {
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl_img_bugs {
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 20px;
+    background: #eea928;
+  }
+  .tabl {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 3fr 3fr 3fr;
+        grid-template-columns: 1fr 3fr 3fr 3fr;
+    -ms-grid-rows: 0fr 0fr;
+        grid-template-rows: 0fr 0fr;
+    font-size: 20px;
+    color: #fff;
+    padding: 30px;
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    border: 3px solid #d1cece;
+  }
+  .task {
+    padding: 10px 20px;
+  }
+}
+
+.main_block233 {
+  width: 100%;
+  margin-top: -11px;
+  background-color: #fcf9f9;
+  padding: 18px 25px 0px 25px;
+  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+          box-shadow: 10px 10px 8px -3px #a8a7a7;
+}
+
+.main_block23 {
+  height: 40%;
+  margin-top: -11px;
+  background-color: #fcf9f9;
+  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+          box-shadow: 10px 10px 8px -3px #a8a7a7;
+}
+
+.grafick3 {
+  font-size: 20px;
+  color: #fff;
+  background-color: #ee055e;
+  padding: 23px;
+  padding-bottom: 20px;
+  width: auto;
+  border: 3px solid #d1cece;
+  -webkit-transform: translateY(-38px);
+          transform: translateY(-38px);
+}
+
+.comp {
+  font-size: 19px;
+  padding-top: 15px;
+}
+
+.dash2 {
+  margin: 0 21px;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 13px 23px 13px 22px;
+  border-bottom: 4px solid #fcf9f9;
+  background-color: #ee055e;
+  border-bottom: 4px solid #d1cece;
+}
+
+.user3 {
+  margin-top: 27px;
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 13px 23px 13px 43px;
+  border-bottom: 4px solid #fcf9f9;
+}
+
+.user3:hover {
+  margin: 0 21px;
+  background-color: #ee055e;
+  margin-top: 27px;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 13px 23px 13px 22px;
+  border-bottom: 4px solid #d1cece;
+}
+
+.main_section {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 25px;
+}
+
+.cicle2 {
+  margin: 0 auto;
+  color: #fff;
+  background-image: url(../images/Alec.png);
+  background-position: center;
+  background-size: 177px;
+  border-radius: 110px;
+  width: 150px;
+  height: 150px;
+  border: 3px solid #d1cece;
+  -webkit-transform: translateY(-65px);
+          transform: translateY(-65px);
+}
+
+.aline {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  margin: -57px 20px 25px 20px;
+}
+
+.alect {
+  font-weight: bold;
+}
+
+.ceo,
+.alect {
+  padding-bottom: 30px;
+}
+
+.useform {
+  display: -ms-grid;
+  display: grid;
+}
+
+.inpco {
+  border: transparent;
+  border-bottom: 1px solid #d1cece;
+  background-color: #fcf9f9;
+  width: 100%;
+}
+
+.inpcoarea {
+  padding-bottom: 45px;
+  border: transparent;
+  border-bottom: 1px solid #d1cece;
+  background-color: #fcf9f9;
+  width: 100%;
+}
+
+.forminput {
+  padding-bottom: 45px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.forminput2 {
+  padding-bottom: 45px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.forminput3 {
+  padding-bottom: 45px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+}
+
+.forminput4 {
+  padding-bottom: 45px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+button {
+  padding: 13px 65px;
+  background-color: #ee055e;
+  font-size: 20px;
+  color: #fff;
+  border: 3px solid #d1cece;
+  margin: 30px 0 30px 0;
+}
+
+button:hover {
+  padding: 13px 65px;
+  background-color: #b60347;
+  font-size: 20px;
+  color: #fff;
+  border: 3px solid #0a0a0a;
+  margin: 30px 0 30px 0;
+}
+
+.butt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.main_hr2 {
+  -webkit-transform: translateY(52px);
+          transform: translateY(52px);
+  width: 100%;
+  position: absolute;
+}
+
+.futer2 {
+  overflow: hidden;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  padding: 92px 3px 45px 21px;
+  background-color: #eeebeb;
 }
 /*# sourceMappingURL=style.css.map */
