--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ svg {
   border-bottom: 4px solid #fcf9f9;
 }
 
-.user:hover {
+.user:hover.support {
+  fill: #fff;
   padding: 13px 23px 13px 22px;
   margin: 0 21px;
   color: #fff;
