--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -55,7 +55,8 @@ svg{
   padding: 13px 23px 13px 43px;
   border-bottom: 4px solid #fcf9f9;
 }
-.user:hover{
+.user:hover.support{
+  fill:#fff;
   padding: 13px 23px 13px 22px;
   margin: 0 21px;
   color:#fff;
