--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -53,7 +53,15 @@ p{
   background-color: $orenge;
 }
 @media(min-width:300px){
-
+  .main_hr{
+    margin-left: -25px;
+    transform: translateY(50px);
+    width: 100%;
+    position: absolute;
+  }
+  .main_text {
+    font-size: 8px;
+  }
   .edit{
     width: 15px;
   }
@@ -137,14 +145,14 @@ p{
     top: 704px;
     border: 3px solid rgb(209, 206, 206);
   }
-  .main {
+  .main2 {
     background-color: #eeebeb;
     overflow: hidden;
     padding: 0 25px;
     position: relative;
 }
 .fut2{
-  font-size: 12px;
+  font-size: 8px;
 }
 .fut{
   transform: translateY(2px);
@@ -160,8 +168,30 @@ p{
   padding: 10px 20px;
 }
 }
+@media(min-width:650px){
+  .fut2{
+    font-size: 16px;
+}
+  .main_text {
+    font-size: 16px;
+  }
+  .main_hr{
+    margin-left: -41px;
+    transform: translateY(50px);
+    width: 100%;
+    position: absolute;
+  }
+}
 @media(min-width:800px){
- 
+  .main_hr{
+    margin-left: -41px;
+    transform: translateY(50px);
+    width: 100%;
+    position: absolute;
+  }
+  .main_text {
+    font-size: 9px;
+  }
   .edit{
     width: 32px;
   }
@@ -245,7 +275,7 @@ p{
     top: 310px;
     border: 3px solid rgb(209, 206, 206);
   }
-  .main {
+  .main2 {
     background-color: #eeebeb;
     overflow: hidden;
     padding: 0 40px;
@@ -268,7 +298,15 @@ p{
 }
 }
 @media(min-width:950px){
-
+  .main_hr{
+    margin-left: 0px;
+    transform: translateY(50px);
+    width: 100%;
+    position: absolute;
+  }
+  .main_text {
+    font-size: 16px;
+  }
   .edit{
     width: 32px;
   }
@@ -352,7 +390,7 @@ p{
     top: 310px;
     border: 3px solid rgb(209, 206, 206);
   }
-  .main {
+  .main2 {
     background-color: #eeebeb;
     margin-left: 239px;
     overflow: hidden;
@@ -376,7 +414,15 @@ p{
 }
 }
 @media(min-width:1440px){
- 
+  .main_hr{
+    margin-left: 0px;
+    transform: translateY(50px);
+    width: 100%;
+    position: absolute;
+  }
+  .main_text {
+    font-size: 16px;
+  }
   .edit{
     width: 32px;
   }
@@ -463,7 +509,7 @@ p{
     top: 116px;
     border: 3px solid rgb(209, 206, 206);
   }
-  .main {
+  .main2 {
     background-color: #eeebeb;
     margin-left: 239px;
     overflow: hidden;
@@ -531,11 +577,6 @@ p{
 }
 .fut2{
   text-align: end;
-}
-.main_hr{
-  transform: translateY(50px);
-  width: 100%;
-  position: absolute;
 }
 .whiteline{
   background-color: transparent;
