--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -1,16 +1,5 @@
-.main_block233{
-  width: 100%;
-  margin-top: -11px;
-  background-color: rgb(252, 249, 249);
-  padding: 18px 25px 0px 25px;
-  box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
-}
-.main_block23{
-  height: 40%;
-  margin-top: -11px;
-  background-color: rgb(252, 249, 249);
-  
-  box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+.fut3{
+  text-align: end;
 }
 .grafick3{
   font-size: 20px;
@@ -50,11 +39,6 @@
   display: flex;
   padding: 13px 23px 13px 22px;
   border-bottom: 4px solid rgb(209, 206, 206);
-}
-.main_section{
-  width: 100%;
-  display: flex;
-  gap: 25px;
 }
 .cicle2{
   margin: 0 auto;
@@ -122,22 +106,6 @@ display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
 }
-button{
-  padding: 13px 65px;
-  background-color: $cherry;
-  font-size: 20px;
-  color:#fff;
-  border: 3px solid rgb(209, 206, 206);
-  margin: 30px 0 30px 0;
-}
-button:hover{
-  padding: 13px 65px;
-  background-color: #b60347;
-  font-size: 20px;
-  color:#fff;
-  border: 3px solid rgb(10, 10, 10);
-  margin: 30px 0 30px 0;
-}
 .butt{
   display: flex;
   justify-content: flex-end;
@@ -147,10 +115,277 @@ button:hover{
   width: 100%;
   position: absolute;
 }
-.futer2{
-  overflow: hidden;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 92px 3px 45px 21px;
-  background-color: #eeebeb;
+@media(min-width:300px){
+  .main_hr2{
+    margin-left: -50px;
+  }
+  .fut3{
+    font-size: 10px;
+  }
+  .futer2{
+    margin-right: -50px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 92px 3px 45px 21px;
+    background-color: #eeebeb;
+  }
+  .main_text{
+    font-size: 7px;
+  }
+  button{
+    padding: 13px 56px;
+    background-color: $cherry;
+    font-size: 8px;
+    color:#fff;
+    border: 3px solid rgb(209, 206, 206);
+    margin: 30px 0 30px 0;
+  }
+  button:hover{
+    padding: 13px 56px;
+    background-color: #b60347;
+    font-size: 9px;
+    color:#fff;
+    border: 3px solid rgb(10, 10, 10);
+    margin: 30px 0 30px 0;
+  }
+  .chapter{
+    font-size: 10px;
+  }
+  label{
+    font-size: 7px;
+  }
+  .main_block233{
+    width: 100%;
+    margin-top: 46px;
+    background-color: rgb(252, 249, 249);
+    padding: 18px 25px 0px 25px;
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_block23{
+    margin-right: -50px;
+    height: 40%;
+    margin-top: 46px;
+    background-color: rgb(252, 249, 249);
+    
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_section{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 25px;
+  }
+  .main {
+    background-color: #eeebeb;
+    overflow: hidden;
+    padding: 0px 87px 0px 40px;
+    position: relative;
+}
+}
+@media(min-width:650px){
+  .main_hr2{
+    margin-left: -50px;
+  }
+  .fut3{
+    font-size: 16px;
+  }
+  .main_text{
+    font-size: 16px;
+  }
+  .futer2{
+    margin-right: -50px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 92px 3px 45px 21px;
+    background-color: #eeebeb;
+  }
+  button{
+    padding: 13px 65px;
+    background-color: $cherry;
+    font-size: 20px;
+    color:#fff;
+    border: 3px solid rgb(209, 206, 206);
+    margin: 30px 0 30px 0;
+  }
+  button:hover{
+    padding: 13px 65px;
+    background-color: #b60347;
+    font-size: 20px;
+    color:#fff;
+    border: 3px solid rgb(10, 10, 10);
+    margin: 30px 0 30px 0;
+  }
+  .chapter{
+    font-size: 16px;
+  }
+  label{
+    font-size: 14px;
+  }
+  .main_block233{
+    width: 100%;
+    margin-top: 46px;
+    background-color: rgb(252, 249, 249);
+    padding: 18px 25px 0px 25px;
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_block23{
+    margin-right: -50px;
+    height: 40%;
+    margin-top: 46px;
+    background-color: rgb(252, 249, 249);
+    
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_section{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 25px;
+  }
+  .main {
+    background-color: #eeebeb;
+    overflow: hidden;
+    padding: 0px 87px 0px 40px;
+    position: relative;
+}
+}
+@media(min-width:950px){
+  .main_hr2{
+    margin-left: 3px;
+  }
+  .fut3{
+    font-size: 16px;
+  }
+  .main_text{
+    font-size: 16px;
+  }
+  .futer2{
+    margin-right: -50px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 92px 3px 45px 21px;
+    background-color: #eeebeb;
+  }
+  button{
+    padding: 13px 65px;
+    background-color: $cherry;
+    font-size: 20px;
+    color:#fff;
+    border: 3px solid rgb(209, 206, 206);
+    margin: 30px 0 30px 0;
+  }
+  button:hover{
+    padding: 13px 65px;
+    background-color: #b60347;
+    font-size: 20px;
+    color:#fff;
+    border: 3px solid rgb(10, 10, 10);
+    margin: 30px 0 30px 0;
+  }
+  .chapter{
+    font-size: 16px;
+  }
+  label{
+    font-size: 16px;
+  }
+  .main_block233{
+    width: 100%;
+    margin-top: 46px;
+    background-color: rgb(252, 249, 249);
+    padding: 18px 25px 0px 25px;
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_block23{
+    margin-right: -50px;
+    height: 40%;
+    margin-top: 46px;
+    background-color: rgb(252, 249, 249);
+    
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_section{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 25px;
+  }
+  .main {
+    background-color: #eeebeb;
+    margin-left: 239px;
+    overflow: hidden;
+    padding: 0px 87px 0px 40px;
+    position: relative;
+}
+}
+@media(min-width:1440px){
+  .main_hr2{
+    margin-left: -50px;
+  }
+  .fut3{
+    font-size: 16px;
+  }
+  .main_text{
+    font-size: 16px;
+  }
+  .futer2{
+    margin-right: -12px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 92px 3px 45px 21px;
+    background-color: #eeebeb;
+  }
+  button{
+    padding: 13px 65px;
+    background-color: $cherry;
+    font-size: 20px;
+    color:#fff;
+    border: 3px solid rgb(209, 206, 206);
+    margin: 30px 0 30px 0;
+  }
+  button:hover{
+    padding: 13px 65px;
+    background-color: #b60347;
+    font-size: 20px;
+    color:#fff;
+    border: 3px solid rgb(10, 10, 10);
+    margin: 30px 0 30px 0;
+  }
+  .chapter{
+    font-size: 16px;
+  }
+  label{
+    font-size: 16px;
+  }
+  .main_block233{
+    width: 100%;
+    margin-top: -11px;
+    background-color: rgb(252, 249, 249);
+    padding: 18px 25px 0px 25px;
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_block23{
+    margin-right: 0px;
+    height: 40%;
+    margin-top: -11px;
+    background-color: rgb(252, 249, 249);
+    
+    box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+  }
+  .main_section{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+  }
+  .main {
+    background-color: #eeebeb;
+    margin-left: 239px;
+    overflow: hidden;
+    padding: 0 40px;
+    position: relative;
+}
 }
