--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -41,6 +41,7 @@
   border-bottom: 4px solid rgb(209, 206, 206);
 }
 .cicle2{
+  box-shadow: 2px 2px 8px 5px rgb(182, 181, 181);
   margin: 0 auto;
   color: #fff;
   background-image: url(../images/Alec.png);
@@ -123,6 +124,7 @@ display: grid;
     font-size: 10px;
   }
   .futer2{
+    margin-bottom: 0%;
     margin-right: -50px;
     overflow: hidden;
     display: grid;
@@ -262,6 +264,7 @@ display: grid;
     font-size: 16px;
   }
   .futer2{
+    margin-bottom: 0%;
     margin-right: -50px;
     overflow: hidden;
     display: grid;
@@ -331,6 +334,7 @@ display: grid;
     font-size: 16px;
   }
   .futer2{
+    margin-bottom: 0%;
     margin-right: -12px;
     overflow: hidden;
     display: grid;
